@@ -5,50 +5,50 @@ import com.natixis.todo.entity.Task;
 import com.natixis.todo.mapper.TaskMapper;
 import com.natixis.todo.repository.TaskRepository;
 import com.natixis.todo.service.TaskService;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class TaskServiceImpl implements TaskService {
     private final TaskRepository taskRepository;
 
-    public TaskServiceImpl(TaskRepository taskRepository, TaskMapper taskMapper) {
+    public TaskServiceImpl(TaskRepository taskRepository) {
         this.taskRepository = taskRepository;
     }
 
     @Override
-    public List<TaskDto> getAllTasks() {
-        return taskRepository.findAll()
+    public List<TaskDto> getAll(Pageable pageable) {
+        return taskRepository.findAll(pageable)
                 .stream()
                 .map(TaskMapper::entityToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public TaskDto getTaskById(Integer id) {
+    public TaskDto getById(Integer id) {
         return taskRepository.findById(id)
                 .map(TaskMapper::entityToDto)
                 .orElseThrow(() -> new RuntimeException("Task not found"));
     }
 
     @Override
-    public TaskDto addTask(TaskDto taskDto) {
+    public TaskDto add(TaskDto taskDto) {
         Task task = TaskMapper.dtoToEntity(taskDto);
         return TaskMapper.entityToDto(taskRepository.save(task));
     }
 
     @Override
-    public List<TaskDto> getTasksByStatus(Boolean completed) {
+    public List<TaskDto> getByStatus(Boolean completed) {
         return taskRepository.findByCompleted(completed)
                 .stream()
                 .map(TaskMapper::entityToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public TaskDto updateTask(Integer id, TaskDto taskDto) {
+    public TaskDto update(Integer id, TaskDto taskDto) {
         Task existingTask = taskRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Task not found"));
 
@@ -61,7 +61,7 @@ public class TaskServiceImpl implements TaskService {
     }
 
     @Override
-    public void deleteTask(Integer id) {
+    public void delete(Integer id) {
         taskRepository.deleteById(id);
     }
 }
